Fix contact info alignment

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -28,17 +28,28 @@
   }
 }
 
-.contactinfo {
+.contactinfodiv {
+  @include large{
+  }
+
+  @include medium{
+  }
+
+  @include small{
+  display: inline-block;
+  }
+}
+
+.contactinfospan {
   @include large {
-  float:right
+  float:right;
   }
 
   @include medium {
-  float:right
+  float:right;
   }
 
   @include small {
-  
   }
 }
 
